--- a/learn-nextjs/package.json
+++ b/learn-nextjs/package.json
@@ -1,14 +1,16 @@
 {
+  "dependencies": {
+    "apollo-client": "0.8.6",
+    "graphql-tag": "^1.3.1",
+    "next": "^1.2.3"
+  },
   "name": "learn-nextjs",
   "version": "1.0.0",
   "main": "index.js",
   "repository": {},
   "license": "MIT",
-  "dependencies": {
-    "next": "^1.2.3"
-  },
   "scripts": {
-    "dev": "next",
+    "dev": "next -p 8080",
     "build": "next build",
     "start": "next start"
   }
