--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -5,6 +5,7 @@
   "repository": {},
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.1",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
