--- a/learn-nextjs/package.json
+++ b/learn-nextjs/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "apollo-client": "0.8.6",
     "graphql-tag": "^1.3.1",
+    "isomorphic-unfetch": "^1.0.0",
     "next": "^1.2.3"
   },
   "name": "learn-nextjs",
